--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "server": "json-server --watch db.json --port 5001"
   },
   "dependencies": {
+    "json-server": "^0.17.0",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4",
-    "json-server": "^0.17.0"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5"
   }
 }
