--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "json-server --watch db.json --port 5001"
   },
   "dependencies": {
+    "framer-motion": "^11.0.3",
     "json-server": "^0.17.0",
     "next": "14.0.4",
     "react": "^18",
